added the "first" section

--- a/index.html
+++ b/index.html
@@ -69,6 +69,23 @@
 				</div>
 			</div>
 		</header>
+		<main class="main">
+			<section class="first">
+				<div class="container">
+					<div class="first__bg">
+						<img src="img//first/first_bg.png" alt="first background">
+					</div>
+					<div class="first__body">
+						<h1 class="first__title title-reset">
+							The VISION AVTR
+						</h1>
+						<p class="first__text text-reset">
+							Inspired by the future
+						</p>
+					</div>
+				</div>
+			</section>
+		</main>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"
