added the "concept" and the "footer" sections

--- a/index.html
+++ b/index.html
@@ -85,7 +85,52 @@
 					</div>
 				</div>
 			</section>
+			<section class="concept">
+				<div class="container">
+					<div class="concept__body">
+						<h3 class="concept__title title--section title-reset">
+							Concept
+						</h3>
+						<p class="concept__text text-reset">
+							Электромобильность в гармонии с человеком и природой. Экологичная технология органических
+							аккумуляторов и продуманная операционная стратегия концепт-кара VISION AVTR.
+						</p>
+						<div class="concept__image">
+							<img src="img/concept/concept_image.jpg" alt="concept image">
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__body">
+					<a class="footer__policy" href="#">
+						Политика конфиденциальности
+					</a>
+					<a class="footer__logo logo" href="#">
+						<img src="img/footer/footer_logo.svg" alt="Mercedes-Benz logo">
+					</a>
+					<ul class="footer__list list list-reset">
+						<li class="list__item">
+							<a class="list__link" href="#">
+								<img src="img/footer/icons/twitter.svg" alt="twitter icon">
+							</a>
+						</li>
+						<li class="list__item">
+							<a class="list__link" href="#">
+								<img src="img/footer/icons/google.svg" alt="google icon">
+							</a>
+						</li>
+						<li class="list__item">
+							<a class="list__link" href="#">
+								<img src="img/footer/icons/facebook.svg" alt="facebook icon">
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</div>
 
 	<script src="https://code.jquery.com/jquery-3.6.1.min.js"
