added the "premier" section

--- a/index.html
+++ b/index.html
@@ -101,6 +101,47 @@
 					</div>
 				</div>
 			</section>
+			<section class="premier">
+				<div class="container">
+					<div class="premier__body">
+						<div class="premier__column">
+							<h3 class="premier__title title--section title-reset">
+								Premier
+							</h3>
+							<p class="premier__text text-reset">
+								На выставке CES 2020 был представлен новый концептуальный Mercedes-Benz – VISION AVTR.
+								Футуристическая концепция представленного электромобиля объединяет человека, природу и
+								автомобиль уникальным образом.
+							</p>
+							<p class="premier__text text-reset">
+								Ола Каллениус, председатель правления Daimler AG и Mercedes-Benz AG, в своем выступлении
+								представил концепт-кар вместе с лауреатом премии Оскар и создателем фильма Аватар, Джеймсом
+								Кэмероном.
+							</p>
+							<p class="premier__text text-reset">
+								Именно философия, созданная культовым режиссером в фантастическом фильме, стала основой создания
+								VISION AVTR.
+							</p>
+							<div class="premier__image">
+								<img src="img/premier/premier_image_1.jpg" alt="premier image 1">
+							</div>
+							<a class="premier__btn" href="#">
+								More
+							</a>
+						</div>
+						<div class="premier__column">
+							<div class="premier__image-2">
+								<img src="img/premier/premier_image_2.png" alt="premier image 2">
+							</div>
+							<p class="premier__text text-reset">
+								«Mercedes-Benz всегда был одним из самых технологичных премиальных брендов. Теперь пришло время
+								объединить роскошь и экологичность. Ведь только так мы сможем соответствовать стандартам
+								будущего».
+							</p>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="container">
