--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
 					</div>
 				</div>
 			</section>
+			<div class="video">
+				<div class="container">
+					<div class="video__body">
+						<div class="video__poster">
+							<img src="img/video/video.png" alt="video poster">
+						</div>
+						<a class="video__btn" href="https://www.youtube.com/watch?v=ChqM3zqTREQ" data-fancybox>
+							<svg width="19" height="23" viewBox="0 0 19 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M19 11.5L0.25 22.3253L0.25 0.674683L19 11.5Z" fill="#F402A2" />
+							</svg>
+							<span>Play video</span>
+						</a>
+					</div>
+				</div>
+			</div>
 		</main>
 		<footer class="footer">
 			<div class="container">
