--- a/index.html
+++ b/index.html
@@ -157,6 +157,54 @@
 					</div>
 				</div>
 			</div>
+			<section class="design">
+				<div class="container">
+					<div class="design__interior">
+						<div class="design__cell">
+							<h3 class="design__cell-title title--section title-reset">
+								Interior & exterior
+							</h3>
+							<p class="design__cell-text text-reset">
+								Дизайн VISION AVTR – воплощение экологичности.
+							</p>
+							<p class="design__cell-text text-reset">
+								Новаторская концепция VISION AVTR сочетает в себе экологичное взаимодействие дизайна интерьера,
+								экстерьера и UX. Весь процесс проектирования был ориентирован на конкретный результат –
+								неповторимый опыт взаимодействия и восприятия концепт-кара водителем и пассажирами. Речь шла о
+								создании уникального пространства, в котором пассажиры имеют биометрическую связь друг с другом,
+								с транспортным средством и окружающим миром.
+							</p>
+							<p class="design__cell-text text-reset">
+								Боковое внешнее отверстие проходит через внутреннюю часть и создаёт бесконечную петлю,
+								прототипом которой стала священная ​​связь между народом На'ви в фильме Аватар и их естественной
+								средой обитания.
+							</p>
+							<p class="design__cell-text text-reset">
+								Также, благодаря удлиненному дизайну «One Bow» и органической философии дизайна, VISION AVTR
+								демонстрирует радикально новый этап автомобилестроения. Таким образом, пройдя путь от концепции
+								осознанности до уникального слияния человека и автомобиля, инженерам Mercedes-Benz удалось
+								создать концептуальный электромобиль VISION AVTR.
+							</p>
+						</div>
+						<div class="design__image-1">
+							<img src="img/design/interior_1.jpg" alt="interior image 1">
+						</div>
+						<div class="design__cell">
+							<p class="design__cell-text text-reset">
+								Лаконичным продолжением внешнего минималистичного дизайна являются передние сиденья, выполненные
+								в очень органичной форме, которая напоминает лиственные гамаки с планеты Пандора. Центральная
+								консоль символизирует Древо Душ, самое священное место На'ви. Блок управления – интуитивно
+								понятным и невероятно функциональным.
+							</p>
+						</div>
+						<div class="design__cell">
+							<div class="design__image-2">
+								<img src="img/design/interior_2.png" alt="interior image 2">
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
 		</main>
 		<footer class="footer">
 			<div class="container">
