--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			<section class="design">
 				<div class="container">
 					<div class="design__interior">
-						<div class="design__cell">
+						<div class="design__cell-one">
 							<h3 class="design__cell-title title--section title-reset">
 								Interior & exterior
 							</h3>
@@ -189,7 +189,7 @@
 						<div class="design__image-1">
 							<img src="img/design/interior_1.jpg" alt="interior image 1">
 						</div>
-						<div class="design__cell">
+						<div class="design__cell-two">
 							<p class="design__cell-text text-reset">
 								Лаконичным продолжением внешнего минималистичного дизайна являются передние сиденья, выполненные
 								в очень органичной форме, которая напоминает лиственные гамаки с планеты Пандора. Центральная
@@ -197,7 +197,7 @@
 								понятным и невероятно функциональным.
 							</p>
 						</div>
-						<div class="design__cell">
+						<div class="design__cell-three">
 							<div class="design__image-2">
 								<img src="img/design/interior_2.png" alt="interior image 2">
 							</div>
