added the "slider" block

--- a/index.html
+++ b/index.html
@@ -204,6 +204,23 @@
 						</div>
 					</div>
 				</div>
+				<div class="design-slider">
+					<div class="design-slider__slide">
+						<img src="img/design/slide_1.jpg" alt="slide 1">
+					</div>
+					<div class="design-slider__slide">
+						<img src="img/design/slide_2.jpg" alt="slide 2">
+					</div>
+					<div class="design-slider__slide">
+						<img src="img/design/slide_3.jpg" alt="slide 3">
+					</div>
+					<div class="design-slider__slide">
+						<img src="img/design/slide_4.jpg" alt="slide 4">
+					</div>
+					<div class="design-slider__slide">
+						<img src="img/design/slide_2.jpg" alt="slide 2">
+					</div>
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
