finished the "design" section

--- a/index.html
+++ b/index.html
@@ -221,6 +221,36 @@
 						<img src="img/design/slide_2.jpg" alt="slide 2">
 					</div>
 				</div>
+				<div class="design-box">
+					<div class="design__box-column">
+						<p class="design__box-text text-reset">
+							Кроме того, центр управления располагается таким образом, что является легко доступным как для
+							водителя, так и для пассажира, а также и для пассажиров сзади.
+						</p>
+						<p class="design__box-text text-reset">
+							Таким образом, VISION AVTR устанавливает тесную биометрическую связь с водителем и помогает
+							повысить осведомленность об окружающей ситуации.
+						</p>
+					</div>
+					<div class="design__box-column">
+						<p class="design__box-text text-reset">
+							Задняя часть сидений и внутренняя отделка крыши выполнены из специальной ткани, которая меняет
+							цвет. В зависимости от освещения текстиль может быть темно-синего или нежного светло-синего цвета.
+						</p>
+						<p class="design__box-text text-reset">
+							Но кроме этого, экологичность салона электромобиля повышена с помощью вегетарианской кожи DINAMICA®
+							– первой и единственной микрофиброй, которая гарантирует экологическую эффективность на протяжении
+							всего производственного цикла.
+						</p>
+						<p class="design__box-text text-reset">
+							DINAMICA® является переработанным материалом из старой одежды, тканей и пластиковых бутылок из
+							ПЭТФ.
+						</p>
+					</div>
+				</div>
+				<div class="design__image-bottom">
+					<img src="img/design/design_bottom.png" alt="design image bottom">
+				</div>
 			</section>
 		</main>
 		<footer class="footer">
