--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
 						<button class="menu__btn btn-reset" role="button">
 							<span></span>
 						</button>
-						<!--<ul class="menu__list list-reset">
+						<ul class="menu__list list-reset">
 							<li class="menu__item">
-								<a class="menu__link" href="#">
+								<a class="menu__link" href="#concept">
 									Concept
 								</a>
 							</li>
 							<li class="menu__item">
-								<a class="menu__link" href="#">
+								<a class="menu__link" href="#premier">
 									Premier
 								</a>
 							</li>
 							<li class="menu__item">
-								<a class="menu__link" href="#">
+								<a class="menu__link" href="#design">
 									Interior & Exterior
 								</a>
 							</li>
 							<li class="menu__item">
-								<a class="menu__link" href="#">
+								<a class="menu__link" href="#contact">
 									Contact
 								</a>
 							</li>
-						</ul>-->
+						</ul>
 					</nav>
 					<a class="header__logo logo" href="#">
 						<img src="img/header/header_logo.svg" alt="Mercedes-Benz logo">
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="concept">
+			<section class="concept" id="concept">
 				<div class="container">
 					<div class="concept__body">
 						<h3 class="concept__title title--section title-reset">
@@ -101,7 +101,7 @@
 					</div>
 				</div>
 			</section>
-			<section class="premier">
+			<section class="premier" id="premier">
 				<div class="container">
 					<div class="premier__body">
 						<div class="premier__column">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 			</div>
-			<section class="design">
+			<section class="design" id="design">
 				<div class="container">
 					<div class="design__interior">
 						<div class="design__cell-one">
@@ -253,7 +253,7 @@
 				</div>
 			</section>
 		</main>
-		<footer class="footer">
+		<footer class="footer" id="contact">
 			<div class="container">
 				<div class="footer__body">
 					<a class="footer__policy" href="#">
